tdf#133501 xmloff: ODF export: export annotation only if extended

(regression from 7c20c3c2a9fc85c66dad9d09908b257beeedd78d
 which forgot to adapt this under the erroneous assumption that
 the feature did make it into ODF 1.3)

Change-Id: Idfe37444b8287edd063fa9576e6d76a332552754
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/95355
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>